martin/src/config/file/snapshots/martin__config__file__process__tests__render_failure_mlt_nested_field_bad_type.snap
---
source: martin/src/config/file/process.rs
expression: "render_failure(indoc! {\"\\n        convert-to-mlt:\\n          tessellate: yes-please\\n    \"})"
---
  × invalid boolean
   ╭─[config.yaml:2:15]
 1 │ convert-to-mlt:
 2 │   tessellate: yes-please
   ·               ─────┬────
   ·                    ╰── invalid boolean
   ╰────
