martin/src/config/file/snapshots/martin__config__file__process__tests__render_failure_mlt_unknown_string.snap
---
source: martin/src/config/file/process.rs
expression: "render_failure(indoc! {\"\\n        convert-to-mlt: atuo\\n    \"})"
---
  × invalid value: string "atuo", expected a string ("auto", "default",
  │ "disabled", "false", "off", "no"), a boolean, or a map of settings
   ╭─[config.yaml:1:1]
 1 │ convert-to-mlt: atuo
   · ───────┬──────
   ·        ╰── invalid value: string "atuo", expected a string ("auto", "default", "disabled", "false", "off", "no"), a boolean, or a map of settings
   ╰────
